objects/geopointe__GP_Route_Plan_User__c.object
<CustomObject>
    <fields>
        <fullName>geopointe__Route_Plan_Configuration__c</fullName>
        <label>Route Plan Configuration</label>
        <referenceTo>geopointe__GP_Route_Plan_Configuration__c</referenceTo>
        <relationshipLabel>Route Plan Users</relationshipLabel>
        <relationshipName>Route_Plan_Users</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>geopointe__Route_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Route Plan</label>
        <referenceTo>geopointe__GP_Route_Plan__c</referenceTo>
        <relationshipName>Route_Plan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>geopointe__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Geopointe_Route_Plan_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Geopointe Route Plan User</label>
    <nameField>
        <displayFormat>RPU-{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Geopointe Route Plan Users</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>